# polymarket-trades

./: .gitignore  LICENSE  README.md  pyproject.toml
src/polymarket_trades/: __init__.py  api.py  cli.py  collector.py  db.py
